[package]
name = "plumbus"
version = "1.0.5"
edition = "2021"
license = "MIT"
description = "Copy to your clipboard using a plumbus"
readme = "README.md"
repository = "https://github.com/Radical-Egg/plumbus"

[dependencies]
atty = "0.2.14"
clap = { version = "3.2.22", features = ["derive"] }
clipboard = "0.5.0"

[[bin]]
name = "plumbus"
path = "src/main.rs"

[lib]
name = "plumbus"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
