[package]
name = "plumbus"
version = "1.1.0"
edition = "2024"
license = "MIT"
description = "Copy to your clipboard using a plumbus"
readme = "README.md"
repository = "https://github.com/Radical-Egg/plumbus"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clipboard = "0.5.0"

[[bin]]
name = "plumbus"
path = "src/main.rs"

[lib]
name = "plumbus"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
